# GWAtoolbox

./: MD5  NAMESPACE  configure  configure.ac  configure.win
R/: ANNOTATE.R  COMPARE.R  DISPERSION_CHECK.R  GENE2SNP.R  GENE2SNPBYNAME.R  GWASFORMAT.R  GWASQC.R  HARMONIZE_ID.R  INDEPENDENT_SNPS.R  KGENES.R  KUSK_CHECK.R  PANNOTATE.R  PGWASFORMAT.R  PGWASQC.R  PLOT.R  PLOT_COMBINED_BOXPLOTS.R  SNP2GENE.R  SNP2GENEHS.R
inst/doc/: ANNOTATE_script.txt  GWASFORMAT_script.txt  GWASQC_script.txt  GWAtoolbox.R  GWAtoolbox.Rnw  PANNOTATE_script.txt  PGWASFORMAT_script.txt  PGWASQC_script.txt  genes_HGNC_ensembl_rel54_may2009_b36.txt  genes_HGNC_ensembl_rel67_may2012_b37.txt  gwa_data_example_1.txt  gwa_data_example_3.csv  gwa_data_example_5.csv  map_b37.txt
inst/extdata/: content_style.css  menu_style.css  script.js
man/: annotate.Rd  compare.Rd  dispersion_check.Rd  gene2snp.Rd  gene2snpByName.Rd  gwasformat.Rd  gwasqc.Rd  harmonize_id.Rd  independent_snps.Rd  kgenes.Rd  kusk_check.Rd  pannotate.Rd  pgwasformat.Rd  pgwasqc.Rd  snp2gene.Rd  snp2geneHS.Rd
src/: GWAtoolbox.cpp  GWAtoolbox.h  Makevars  Makevars.in  Makevars.win
src/annotation/: Annotator.cpp  AnnotatorException.cpp  Makefile
src/auxiliary/: Makefile  auxiliary.cpp
src/bitarray/: BitArray.cpp  BitArrayException.cpp  Makefile
src/descriptor/: Descriptor.cpp  DescriptorException.cpp  Makefile
src/exception/: Exception.cpp  Makefile
src/gwafile/: GwaFile.cpp  GwaFileException.cpp  Makefile
vignettes/: GWASQC_script.txt  GWAtoolbox.Rnw  gwa_data_example_2.tbl  gwa_data_example_4.txt
(+204 files in other folders)
